BUGFIX - Suppression des bords autour des catégories de la navbar en version mobile

--- a/src/styles/components/modern-design/buttons.css
+++ b/src/styles/components/modern-design/buttons.css
@@ -1,7 +1,6 @@
 @import url("../../global.css");
 
-button,
-.cta-button {
+button.cta-button {
     background-color: var(--clr-primary-100);
     color: var(--clr-primary-0);
     border-radius: 99px;
